--- a/webModule/src/main/webapp/index.html
+++ b/webModule/src/main/webapp/index.html
@@ -18,7 +18,7 @@
         @import "css/attachments.css";
         @import "css/emails.css";
     </style>
-    <link rel="shortcut icon" type="image/x-icon" href="imaашудвыges/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
 </head>
 <body>
 <div class="wrapper">
